add Security to Java and Test

--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.networknt:json-schema-validator:1.0.82'
 
     runtimeOnly 'com.h2database:h2'
 }
